added an svg endpoint class

--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
+    <ProjectReference Include="../StreetRunner/StreetRunner.csproj"/>
   </ItemGroup>
 
 </Project>
