--- a/tests/StreetRunner.Tests/tests.csproj
+++ b/tests/StreetRunner.Tests/tests.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
     <ProjectReference Include="../../src/StreetRunner/StreetRunner.csproj"/>
+    <ProjectReference Include="../../src/Web/Web.csproj"/>
   </ItemGroup>
 
 </Project>
