--- a/tests/StreetRunner.Tests/tests.csproj
+++ b/tests/StreetRunner.Tests/tests.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <None Update="files\*.*" CopyToOutputDirectory="Always" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-    <ProjectReference Include="../../src/StreetRunner/StreetRunner.csproj"/>
-    <ProjectReference Include="../../src/Web/Web.csproj"/>
+    <ProjectReference Include="../../src/StreetRunner/StreetRunner.csproj" />
+    <ProjectReference Include="../../src/Web/Web.csproj" />
   </ItemGroup>
-
 </Project>
