--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -1,9 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <AssemblyName>StreetRunner.Core</AssemblyName>
+    <RootNamespace>StreetRunner.Core</RootNamespace>
   </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
-  </ItemGroup>
 </Project>
