--- a/src/Cli/Cli.csproj
+++ b/src/Cli/Cli.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <AssemblyName>StreetRunner.Cli</AssemblyName>
+    <RootNamespace>StreetRunner.Cli</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
