--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <AssemblyName>StreetRunner.Web</AssemblyName>
+    <RootNamespace>StreetRunner.Web</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <None Update="map-files\*.*" CopyToOutputDirectory="Always" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
-    <ProjectReference Include="../StreetRunner/StreetRunner.csproj" />
+    <ProjectReference Include="../Core/Core.csproj" />
   </ItemGroup>
 </Project>
