--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <AssemblyName>StreetRunner.UnitTests</AssemblyName>
+    <RootNamespace>StreetRunner.UnitTests</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <None Update="files\*.*" CopyToOutputDirectory="Always" />
@@ -9,7 +11,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-    <ProjectReference Include="../../src/StreetRunner/StreetRunner.csproj" />
+    <ProjectReference Include="../../src/Core/Core.csproj" />
     <ProjectReference Include="../../src/Web/Web.csproj" />
   </ItemGroup>
 </Project>
