--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -11,4 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <ProjectReference Include="../Core/Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.0" />
+  </ItemGroup>
 </Project>
