--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <ProjectReference Include="../Core/Core.csproj" />
   </ItemGroup>
   <ItemGroup>
