--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Update="map-files\*.*" CopyToOutputDirectory="Always" />
+    <None Update="wwwroot\*.*" CopyToOutputDirectory="Always" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.2" />
@@ -13,5 +14,8 @@
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <ProjectReference Include="../Core/Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot" />
   </ItemGroup>
 </Project>
