--- a/src/React/React.csproj
+++ b/src/React/React.csproj
@@ -5,11 +5,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="node_modules\**" />
+    <Compile Remove="dist\**" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Remove="node_modules\**" />
+    <EmbeddedResource Remove="dist\**" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="node_modules\**" />
+    <None Remove="dist\**" />
   </ItemGroup>
 </Project>
