improving the dockerfile so it builds and tests the code

--- a/tests/E2ETests/E2ETests.csproj
+++ b/tests/E2ETests/E2ETests.csproj
@@ -7,10 +7,6 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.2" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Shouldly, Version=3.0.0.0, Culture=neutral, PublicKeyToken=6042cbcb05cbc941">
-      <HintPath>..\..\..\..\.nuget\packages\shouldly\3.0.0\lib\netstandard1.3\Shouldly.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Shouldly" Version="3.0.0" />
   </ItemGroup>
 </Project>
