--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Docker image
-# Build a Docker image to deploy, run, or push to a container registry.
-# Add steps that use Docker Compose, tag images, push to a registry, run an image, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 pool:
   vmImage: 'Ubuntu 16.04'
 
@@ -10,5 +5,22 @@ variables:
   imageName: 'street-runner:$(build.buildId)'
 
 steps:
-- script: docker build -f Dockerfile -t $(imageName) .
-  displayName: 'docker build'
+#- script: docker build -f Dockerfile -t $(imageName) .
+#  displayName: 'docker build'
+#- script: docker push $(imageName) 
+
+- task: Docker@1
+  displayName: 'Build an image'
+  inputs:
+    imageName: 'revlucio.azurecr.io/repositoryname:$(Build.BuildId)'
+#- task: Docker@1
+#  displayName: Login
+#  inputs:
+#    azureSubscriptionEndpoint: 'ContosoAzureSubscription'
+#    azureContainerRegistry: revlucio.azurecr.io
+#    command: login
+#- task: Docker@1
+#  displayName: 'Push an image'
+#  inputs:
+#    command: 'push'
+#    imageName: 'revlucio.azurecr.io/repositoryname:$(Build.BuildId)'
